Changed lists into functional links

--- a/snkrlockerPLUS/index.html
+++ b/snkrlockerPLUS/index.html
@@ -24,9 +24,9 @@
 
             <div class="right-side">
                 <ul>
-                    <li>header link one</li>
-                    <li>header link two</li>
-                    <li>header link three</li>
+                    <li><a href="http://www.google.com">header link one</a></li>
+                    <li><a href="http://www.google.com">header link two</a></li>
+                    <li><a href="http://www.google.com">header link three</a></li>
                 </ul>
             </div>
         </div>
