Added intro body and button

--- a/snkrlockerPLUS/index.html
+++ b/snkrlockerPLUS/index.html
@@ -13,8 +13,9 @@
         <div class="header">
             <div class="left-side">
                 <div class="header-logo">
+                    <a href="index.html">
                     <img src="https://images.solecollector.com/images/fl_lossy,q_auto/c_crop,h_452,w_803,x_395,y_374/it1yg9ro596bfziyravb/dior-air-jordan-1-low-official" alt="Jordan 1 Dior">
-                    
+                    </a>
                 </div>
             </div>
 
@@ -32,9 +33,19 @@
         </div>
         
         <div class="intro">
-            HI
+            <div class="intro-left">
+                <div class="intro-title">Welcome to the most <br>reliable sneaker marketplace.</div>
+                <div class="intro-text">This website has some subtext that goes here under the main title.</div>
+                <button class="intro-button">Sign up</button>
+
+            </div>
+
+            <div class="intro-image">
+                <img src="https://cdn.sanity.io/images/c1chvb1i/production/7d032d2f83b29f205a44da408a2b99c9bdfddd8c-1100x735.jpg" alt="Kaws image">
+            </div>
         </div>
 
     </div>
+
 </body>
 </html>
