--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
                 <a href="index.html"><img src="images\sKomEmblem2.3.png"></a>
             </div>
             <div class="team-name">
-                sKom
+                <a href="index.html">sKom</a>
             </div>
             <a href="#" class="toggle-button">
                 <span class="bar"></span>
