added sidebar and info panel

--- a/index.html
+++ b/index.html
@@ -33,8 +33,24 @@
               
             </div>
         </div>
+        <div class="socials">
+            <a href="https://www.instagram.com"><img src="http://assets.stickpng.com/images/580b57fcd9996e24bc43c521.png"></a>
+            <a href="https://twitter.com"><img src="https://www.freepnglogos.com/uploads/twitter-logo-png/twitter-logo-vector-png-clipart-1.png"></a>
+            <a href="https://youtube.com"><img src="https://www.freeiconspng.com/thumbs/youtube-logo-png/hd-youtube-logo-png-transparent-background-20.png"></a>
+            <a href="mailto:skom@qkinbox.com"><img src="https://www.designbust.com/download/1027/png/transparent_email_icon512.png"></a>
+        </div>
         <div class="intro">
+            <div class="image">
             <img src ="images\skompic.jpg">
+            <div class="intro-card">
+                <span class="intro-title">
+                    what is sKom?
+                </div>
+                <div class="title-text">
+                    founded in 2017 by alfredo pasten, some kind of mission (skom) has become one of the most recognizable esports organizations in long beach. we here at skom value our fans, benefits of players and staff, and bringing our A-game to the world of esports. our journey as a team has only begun.
+                </div>
+            </div> 
+            </div>
             
         </div>
     </nav>
