--- a/index.html
+++ b/index.html
@@ -47,10 +47,11 @@
                     what is sKom?
                 </div>
                 <div class="title-text">
-                    founded in 2017 by alfredo pasten, some kind of mission (skom) has become one of the most recognizable esports organizations in long beach. we here at skom value our fans, benefits of players and staff, and bringing our A-game to the world of esports. our journey as a team has only begun.
+                    founded in 2017 by alfredo p., some kind of mission (skom) has become one of the most recognizable esports organizations in long beach. we here at skom value our fans, benefits of players and staff, and bringing our A-game to the world of esports. our journey as a team has only begun.
                 </div>
             </div> 
-            </div>
+        </div>
+        <div class="leader">Click here to learn more about the roster.</div>
             
         </div>
     </nav>
