--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
             </div>
         </div>
         <div class="socials">
-            <a href="https://www.instagram.com"><img src="http://assets.stickpng.com/images/580b57fcd9996e24bc43c521.png"></a>
-            <a href="https://twitter.com"><img src="https://www.freepnglogos.com/uploads/twitter-logo-png/twitter-logo-vector-png-clipart-1.png"></a>
-            <a href="https://youtube.com"><img src="https://www.freeiconspng.com/thumbs/youtube-logo-png/hd-youtube-logo-png-transparent-background-20.png"></a>
-            <a href="mailto:skom@qkinbox.com"><img src="https://www.designbust.com/download/1027/png/transparent_email_icon512.png"></a>
+            <a href="https://www.instagram.com"><img src="images/icon/instagram.png"></a>
+            <a href="https://twitter.com"><img src="images/icon/twitter.png"></a>
+            <a href="https://youtube.com"><img src="images/icon/youtube.png"></a>
+            <a href="mailto:skom@qkinbox.com"><img src="images/icon/email.png"></a>
         </div>
         <div class="intro">
             <div class="image">
