toggle function and roster redirect

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>some kind of mission.</title>
 </head>
-<body>
+<body onload="createToggle()">
+  
     <script src="app.js" defer></script>
     <nav class="container">
         <div class="header">
@@ -50,8 +51,11 @@
                     founded in 2017 by alfredo p., some kind of mission (skom) has become one of the most recognizable esports organizations in long beach. we here at skom value our fans, benefits of players and staff, and bringing our A-game to the world of esports. our journey as a team has only begun.
                 </div>
             </div> 
+            <div class="leader"><a href=roster.html>Click here to learn more about the roster.</a>
+
+            </div>
         </div>
-        <div class="leader">Click here to learn more about the roster.</div>
+      
             
         </div>
     </nav>
