--- a/store.html
+++ b/store.html
@@ -8,7 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>some kind of mission.</title>
 </head>
-<body>
+<body onload="createToggle()">
+    <script src="app.js" defer></script>
     <nav class="container">
         <div class="header">
             <div class="team-logo">
